Humanise the README (#17)
The README had drifted into the same voice as the code's comments, and at that
length it reads as something generated rather than written: every feature a
five-line bullet, an em-dashed aside in most sentences, and no answer anywhere
to the first question a visitor actually has, which is how to start the thing.
CLAUDE.md already carries the detailed version for an agent, so this one is free
to be shorter and plainer.

It opens with a picture and a Running it section now -- clone, mvn -q compile
exec:exec, File > Open -- and controls sit near the top, where somebody who has
just launched a game will look. The feature list is split into short paragraphs
with a bold lead rather than one long list, the screenshots follow it, and the
headless section is cut roughly in half and points at CLAUDE.md for the rest.
There was no licence section; there is one now.

Nothing about the emulator changed and none of the substance is gone: the
oam_stress deviation, the two MMC3 ROMs that fail and the reason each one does,
the difference between a save state and a .sav. The commands were run rather
than copied across -- the jar builds under the name given, and the headless
example writes the two PNGs, the report and the WAV that the paragraph under it
says it does.

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>